apps/adminer/namespace.yaml
# Namespace Adminer - administration BDD (MySQL, etc.)
# ===================================================
apiVersion: v1
kind: Namespace
metadata:
  name: adminer
  labels:
    app.kubernetes.io/name: adminer
    app.kubernetes.io/part-of: kubesecurebox
  annotations:
    argocd.argoproj.io/sync-wave: "0"
